[gd_scene load_steps=44 format=3 uid="uid://dwaxetni8o72x"]

[ext_resource type="Script" uid="uid://dreusj4aflb73" path="res://Enemies/ArrowShooter/arrow_shooter.gd" id="1_kvdkt"]
[ext_resource type="Texture2D" uid="uid://30snk7aw2viw" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Archer/Archer/Archer-Attack01.png" id="2_kvdkt"]
[ext_resource type="Texture2D" uid="uid://dl3xrfu6auxqv" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Archer/Archer/Archer-Death.png" id="3_0odjd"]
[ext_resource type="Texture2D" uid="uid://kwtm2ra70kuk" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Archer/Archer/Archer-Idle.png" id="3_6velh"]
[ext_resource type="Texture2D" uid="uid://jv7h35xoel7f" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Archer/Archer/Archer-Hurt.png" id="3_e3ydq"]
[ext_resource type="Texture2D" uid="uid://0bgxasdljq5p" path="res://Test Tiles and placeholders/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Archer/Archer/Archer-Walk.png" id="4_e3ydq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0odjd"]
atlas = ExtResource("2_kvdkt")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep47i"]
atlas = ExtResource("2_kvdkt")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1f6d"]
atlas = ExtResource("2_kvdkt")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjhku"]
atlas = ExtResource("2_kvdkt")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2h4b"]
atlas = ExtResource("2_kvdkt")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytesg"]
atlas = ExtResource("2_kvdkt")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_akfnc"]
atlas = ExtResource("2_kvdkt")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0nyt"]
atlas = ExtResource("2_kvdkt")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4dyk"]
atlas = ExtResource("2_kvdkt")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_63x23"]
atlas = ExtResource("3_0odjd")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d51dp"]
atlas = ExtResource("3_0odjd")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylhlo"]
atlas = ExtResource("3_0odjd")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_htirb"]
atlas = ExtResource("3_0odjd")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgpar"]
atlas = ExtResource("3_e3ydq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoppx"]
atlas = ExtResource("3_e3ydq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr8b4"]
atlas = ExtResource("3_e3ydq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji371"]
atlas = ExtResource("3_e3ydq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sqls"]
atlas = ExtResource("3_6velh")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm1mf"]
atlas = ExtResource("3_6velh")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyjpa"]
atlas = ExtResource("3_6velh")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2okd"]
atlas = ExtResource("3_6velh")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oufc2"]
atlas = ExtResource("3_6velh")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx7x6"]
atlas = ExtResource("3_6velh")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0lf3"]
atlas = ExtResource("4_e3ydq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq6t1"]
atlas = ExtResource("4_e3ydq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktq11"]
atlas = ExtResource("4_e3ydq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_njipj"]
atlas = ExtResource("4_e3ydq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_87u7y"]
atlas = ExtResource("4_e3ydq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tktgk"]
atlas = ExtResource("4_e3ydq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl0ks"]
atlas = ExtResource("4_e3ydq")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vbv3"]
atlas = ExtResource("4_e3ydq")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_fgpar"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0odjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep47i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1f6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjhku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2h4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytesg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akfnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0nyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4dyk")
}],
"loop": false,
"name": &"Attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63x23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d51dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylhlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htirb")
}],
"loop": true,
"name": &"Death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgpar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoppx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr8b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji371")
}],
"loop": true,
"name": &"Hurt",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sqls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm1mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyjpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2okd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oufc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx7x6")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0lf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq6t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktq11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njipj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87u7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tktgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl0ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vbv3")
}],
"loop": true,
"name": &"Walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7bn3"]
size = Vector2(58, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6d4v"]
size = Vector2(1593, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvdkt"]
size = Vector2(25.75, 32.375)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvdkt"]
bg_color = Color(0.938881, 0.879774, 0.965493, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6velh"]
bg_color = Color(0.875827, 0, 0.305009, 1)

[node name="ArrowShooter" type="CharacterBody2D" groups=["enemies"]]
scale = Vector2(3.90463, 3.90463)
collision_mask = 2
script = ExtResource("1_kvdkt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4.02205, 4.02205)
sprite_frames = SubResource("SpriteFrames_fgpar")
animation = &"Attack1"
frame = 8
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -3.5)
shape = SubResource("RectangleShape2D_s7bn3")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
light_mask = 0
position = Vector2(-5.5, -5)
scale = Vector2(-0.617108, 6.41921)
shape = SubResource("RectangleShape2D_e6d4v")

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="ArrowSpawnPoint" type="Marker2D" parent="."]
position = Vector2(94.2471, -3.32938)

[node name="Hurtbox" type="Area2D" parent="."]
scale = Vector2(1.7171, 1.7171)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -0.8125)
shape = SubResource("RectangleShape2D_kvdkt")

[node name="PostureBar" type="ProgressBar" parent="."]
offset_left = -30.7327
offset_top = -47.3797
offset_right = 9.26726
offset_bottom = -43.3797
scale = Vector2(1.49172, 1.49172)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0.0745098, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_kvdkt")
theme_override_styles/fill = SubResource("StyleBoxFlat_6velh")
show_percentage = false

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
